objects/Billing_Schedule_Configurator__mdt/Billing_Schedule_Configurator__mdt.object-meta.xml
<CustomObject>
    <description>Store information related to Billing Schedule Configurator metadata</description>
    <label>Billing Schedule Configurator</label>
    <pluralLabel>Billing Schedule Configurator</pluralLabel>
</CustomObject>