objects/Billing_Schedule_Configurator__mdt/fields/Billing_Schedule_Fields__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Fields__c</fullName>
    <description>Fields to query from Billing Schedule object. Used in BillingScheduleConfiguratorController. updateBillingInformationOnQuote().</description>
    <label>Billing Schedule Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>