objects/Billing_Schedule_Configurator__mdt/fields/BundleOptionTypesNotShownInTool__c.field-meta.xml
<CustomField>
    <fullName>BundleOptionTypesNotShownInTool__c</fullName>
    <label>Bundle Option Types Not Shown In Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>