objects/Billing_Schedule_Configurator__mdt/fields/ProfilesWithRestrictedOppStageAccess__c.field-meta.xml
<CustomField>
    <fullName>ProfilesWithRestrictedOppStageAccess__c</fullName>
    <label>ProfilesWithRestrictedOppStageAccess</label>
    <length>250</length>
    <type>Text</type>
</CustomField>