objects/Billing_Schedule_Configurator__mdt/fields/ProfilesWithRestrictedPaymentTypesAccess__c.field-meta.xml
<CustomField>
    <fullName>ProfilesWithRestrictedPaymentTypesAccess__c</fullName>
    <inlineHelpText>Profile Names having access to Restricted Payment Types. Profile names to be separated by semi colon.</inlineHelpText>
    <label>ProfilesWithRestrictedPaymentTypesAccess</label>
    <length>250</length>
    <type>Text</type>
</CustomField>