objects/Billing_Schedule_Configurator__mdt/fields/QuoteTermsForFirstBilling__c.field-meta.xml
<CustomField>
    <fullName>QuoteTermsForFirstBilling__c</fullName>
    <inlineHelpText>Quote terms shown to the customer in Quote Template Invoicing section for first billing that will be invoiced to the customer</inlineHelpText>
    <label>QuoteTermsForFirstBilling</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>