objects/Billing_Schedule_Configurator__mdt/fields/QuoteTermsForLockedDates__c.field-meta.xml
<CustomField>
    <fullName>QuoteTermsForLockedDates__c</fullName>
    <description>Quote Terms in Generate Document for locked dates</description>
    <inlineHelpText>Quote Terms in Generate Document for locked dates</inlineHelpText>
    <label>QuoteTermsForLockedDates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>