objects/Billing_Schedule_Configurator__mdt/fields/QuoteTermsForUnlockedDates__c.field-meta.xml
<CustomField>
    <fullName>QuoteTermsForUnlockedDates__c</fullName>
    <description>Quote terms in Generate Document for unlocked dates</description>
    <inlineHelpText>Quote terms in Generate Document for unlocked dates</inlineHelpText>
    <label>QuoteTermsForUnlockedDates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>