objects/Billing_Schedule_Configurator__mdt/fields/QuoteTermsForZeroDollars__c.field-meta.xml
<CustomField>
    <fullName>QuoteTermsForZeroDollars__c</fullName>
    <label>QuoteTermsForZeroDollars</label>
    <type>TextArea</type>
</CustomField>