objects/Billing_Schedule_Configurator__mdt/fields/RestrictedPaymentTypes__c.field-meta.xml
<CustomField>
    <fullName>RestrictedPaymentTypes__c</fullName>
    <description>These payment types separated by &quot;; &quot; will be visible to profiles - Tanium Deals Desk, System Administrator and Tanium System Administrator only.</description>
    <inlineHelpText>These payment types separated by &quot;; &quot; will be visible to profiles - Tanium Deals Desk, System Administrator and Tanium System Administrator only.</inlineHelpText>
    <label>Restricted Payment Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>